<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="bgnDate">Begin Date</string>
    <string name="sortOrder">Sort Order</string>
    <string name="ndvs">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion">Fashion &amp; Style</string>
    <string name="sports">Sports</string>
    <string name="neterr">Network Error</string>
</resources>
